--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                                 <table class="exp_content">
                                     <tr>
                                         <th>작업기간</th>
-                                        <td>2019.11.18 ~ 2019.12.03</td>
+                                        <td>2019.12.02 ~ 2019.12.18</td>
                                     </tr>
                                     <tr>
                                         <th></th>
@@ -413,7 +413,7 @@
                             <div class="concept">
                                 <h3 class="sub_title">Design Concept</h3>
                                 <p>
-                                    <br>
+                                    접근성이 쉬운 레이아웃으로 구성하였고,<br>
                                     정직하고 신뢰감을 주는 느낌을 강조하기 위해<br>
                                     남색 계열의 색상을 포인트로 사용하였습니다.
                                 </p>
